# dnd-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
canon/: whispers_bell_tower.json
docs/: 下一步可玩垂直切片方案.md  原始数据.md  待改进问题.md  战斗流程.md
docs/DM/: 00-DM节点扩展方案.md  01-中央DM主图方案.md  dm规则.md
docs/debug/: 测试流程.md
docs/战斗/: 01-战斗状态定义.md  02-LangGraph流程设计.md  03-中断交互协议.md  README.md
docs/故事框架/: 00-故事系统需求分析.md
front/pc-dnd-bot/: index.html  package-lock.json  package.json
front/pc-dnd-bot/src/: App.css  App.tsx  index.css
knowledge/monsters/: goblin.md
knowledge/rules/: ability_check.md  attack_roll.md  damage_severity.md  group_check.md  improvise_damage.md  passive_check.md  proficiency.md  saving_throw.md  try_again.md
knowledge/skills/: second_wind.md
src/: app.py  graph.py
src/combat/: __init__.py  dice.py  dm_bridge.py  engine.py  graph.py  interrupts.py  nodes.py  rules.py
src/common/example/: example_agent.py
src/common/prompts/: __init__.py  prompt_repository.py
src/common/utils/: llm_util.py  log_util.py  mysql_util.py  writer.py
src/common/ws/: __init__.py  ws_manager.py
src/dm/: __init__.py  agent.py  knowledge.py  prompt.py  tools.py  world_bridge.py
src/model/: __init__.py  attack.py  canon.py  combat_state.py  combatant.py  dm_state.py  effects.py  enums.py
src/session/: __init__.py  common.py  dm_subgraph.py  engine.py  graph.py  story_nodes.py
src/story/: __init__.py  loader.py
test/: dp.py  test_combat_flow.py  test_session_flow.py  test_story_flow.py
