[project]
name = "dnd-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.11",
    "langchain[openai]>=1.2.12",
    "langchain>=1.2.12",
    "langgraph>=1.2.6",
    "load-dotenv>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiomysql>=0.2.0",
    "black>=26.5.1",
]
